Add ID Restrictions

--- a/html/projects.html
+++ b/html/projects.html
@@ -82,13 +82,14 @@
                     <p>
                         <br>
                         <form id="radio">
+                            <span>
 
-                            <input type="radio" class="preset" name="IDtype" value="NGC">NGC
-                            <input class="preset" type="radio" name="IDtype" value="IC">IC
-                            <input class="preset" type="radio" name="IDtype" value="M">Messier
-                            <input class="preset" type="radio" name="IDtype" value="B">B
-                            <input class="preset" type="radio" name="IDtype" value="LBN">LBN
-
+                            <input class="preset" type="radio" name="IDtype" value="NGC"><label>NGC</label>
+                            <input class="preset" type="radio" name="IDtype" value="IC"><label>IC</label>
+                            <input class="preset" type="radio" name="IDtype" value="M"><label>M</label>
+                            <input class="preset" type="radio" name="IDtype" value="B"><label>B</label>
+                            <input class="preset" type="radio" name="IDtype" value="LBN"><label>LBN</label>
+                        </span>     
 
                         </form>
                         <br>
@@ -147,11 +148,13 @@
             </fieldset>
         </div>
 
+        <div>
         <p id="catalog">
             <table id="grid">
 
             </table>
         </p>
+    </div>
 
 
 
