Add first filter grid

--- a/html/projects.html
+++ b/html/projects.html
@@ -84,12 +84,17 @@
                         <form id="radio">
                             <span>
 
-                            <input class="preset" type="radio" name="IDtype" value="NGC"><label>NGC</label>
-                            <input class="preset" type="radio" name="IDtype" value="IC"><label>IC</label>
-                            <input class="preset" type="radio" name="IDtype" value="M"><label>M</label>
-                            <input class="preset" type="radio" name="IDtype" value="B"><label>B</label>
-                            <input class="preset" type="radio" name="IDtype" value="LBN"><label>LBN</label>
-                        </span>     
+                                <input class="preset" type="radio" name="IDtype" value="NGC">
+                                <label>NGC</label>
+                                <input class="preset" type="radio" name="IDtype" value="IC">
+                                <label>IC</label>
+                                <input class="preset" type="radio" name="IDtype" value="M">
+                                <label>M</label>
+                                <input class="preset" type="radio" name="IDtype" value="B">
+                                <label>B</label>
+                                <input class="preset" type="radio" name="IDtype" value="LBN">
+                                <label>LBN</label>
+                            </span>
 
                         </form>
                         <br>
@@ -120,9 +125,10 @@
                         <br>
                         <button id="resetform" type="button">Reset</button>
 
-                        <br><br>
+                        <br>
+                        <br>
                         <p id="logform">Here</p>
-                    
+
                     </p>
             </form>
             </fieldset>
@@ -137,6 +143,7 @@
 
         <div id="filter">
             <fieldset>
+                
                 <legend>Filter</legend>
 
                 <form>
@@ -149,12 +156,12 @@
         </div>
 
         <div>
-        <p id="catalog">
-            <table id="grid">
+            <p id="catalog">
+                <table id="grid">
 
-            </table>
-        </p>
-    </div>
+                </table>
+            </p>
+        </div>
 
 
 
