--- a/html/gallery.html
+++ b/html/gallery.html
@@ -9,6 +9,7 @@
     <script src='   jquery-3.3.1.js'></script>
 
     <script src='../javascript/gallery.js'></script>
+
     <meta charset='utf-8'>
     <meta name='author' content='Stamatis Sarris'>
     <meta name='description' content='Astrophotography star catalogue'>
@@ -39,86 +40,52 @@
 
         </div>
     </header>
-    <section>
-        <!-- Images used to open the lightbox -->
-        <div class="row">
-            <div class="column">
-                <img src="../Photos/Crescent_Nebula___Ngc6888.jpg"  height="200px" onclick="openModal();currentSlide(1)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="../Photos/Ic434___Horsehead_Nebula__lrgb_.jpg" height="200px" onclick="openModal();currentSlide(2)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="../Photos/Ic_405____Flaming_Star_Nebula__hargb_.jpg" height="200px" onclick="openModal();currentSlide(3)" class="hover-shadow">
-            </div>
-            <div class="column">
-                <img src="../Photos/Ldn1235___Vdb149__vdb150.jpg" height="200px" onclick="openModal();currentSlide(4)" class="hover-shadow">
-            </div>
-        </div>
 
-        <!-- The Modal/Lightbox -->
-        <div id="myModal" class="modal">
-            <span class="close cursor" onclick="closeModal()">&times;</span>
-            <div class="modal-content">
 
-                <div class="mySlides">
-                    <div class="numbertext">1 / 4</div>
-                    <img src="../Photos/Crescent_Nebula___Ngc6888.jpg" style="width:100%">
-                </div>
+    <br>
+    
 
-                <div class="mySlides">
-                    <div class="numbertext">2 / 4</div>
-                    <img src="../Photos/Ic434___Horsehead_Nebula__lrgb_.jpg" style="width:100%">
-                </div>
 
-                <div class="mySlides">
-                    <div class="numbertext">3 / 4</div>
-                    <img src="../Photos/Ic_405____Flaming_Star_Nebula__hargb_.jpg" style="width:100%">
-                </div>
+    <div class="gconteiner">
+        <ul>
+                <li class="button" data-filter="all">All</li>
 
-                <div class="mySlides">
-                    <div class="numbertext">4 / 4</div>
-                    <img src="../Photos/Ldn1235___Vdb149__vdb150.jpg" style="width:100%">
-                </div>
+            <li class="button" data-filter="Nebula">Nebula</li>
+            <li class="button" data-filter="Galaxy">Galaxy</li>
+            <li class="button" data-filter="DarkNebula">Dark Nebula</li>
 
-                <!-- Next/previous controls -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </ul>
+        <div style="clear: both;"></div>
 
-                <!-- Caption text -->
-                <div class="caption-container">
-                    <p id="caption"></p>
-                </div>
+        
 
-                <!-- Thumbnail image controls -->
-                <div class="column">
-                    <img class="demo" src="../Photos/Crescent_Nebula___Ngc6888.jpg" onclick="currentSlide(1)" alt="Nature">
-                </div>
+<BR><BR>
+    <BR>
 
-                <div class="column">
-                    <img class="demo" src="../Photos/Ic434___Horsehead_Nebula__lrgb_.jpg" onclick="currentSlide(2)" alt="Trolltunga">
-                </div>
-
-                <div class="column">
-                    <img class="demo" src="../Photos/Ic_405____Flaming_Star_Nebula__hargb_.jpg" onclick="currentSlide(3)" alt="Mountains">
-                </div>
-
-                <div class="column">
-                    <img class="demo" src="../Photos/Ldn1235___Vdb149__vdb150.jpg" onclick="currentSlide(4)" alt="Lights">
-                </div>
-            </div>
-        </div>F
+        <a target="_blank" href="../Photos/Crescent_Nebula___Ngc6888.jpg"><img class="filter gallery Nebula" src="../Photos/Crescent_Nebula___Ngc6888.jpg" alt="Nebula" ></img></a>
+        <a target="_blank" href="../Photos/Ic434___Horsehead_Nebula__lrgb_.jpg"><img class="filter gallery Nebula" src="../Photos/Ic434___Horsehead_Nebula__lrgb_.jpg" alt="Nebula"></img></a>
+        <a target="_blank" href="../Photos/Ic_405____Flaming_Star_Nebula__hargb_.jpg"><img class="filter gallery Nebula" src="../Photos/Ic_405____Flaming_Star_Nebula__hargb_.jpg" alt="Nebula"></img></a>
+        <a target="_blank" href="../Photos/Ldn1235___Vdb149__vdb150.jpg"><img class="filter gallery DarkNebula" src="../Photos/Ldn1235___Vdb149__vdb150.jpg" alt="Nebula"></img></a>
+        <a target="_blank" href="../Photos/M31_Andromeda_Galaxy.png"><img class="filter gallery Galaxy" src="../Photos/M31_Andromeda_Galaxy.png" alt="Nebula"></img></a>
+        <a target="_blank" href="../Photos/Messier_33___Triangulum_Galaxy.jpg"><img class="filter gallery Galaxy" src="../Photos/Messier_33___Triangulum_Galaxy.jpg" alt="Nebula"></a>
+        <a target="_blank" href="../Photos/M45.png"><img class="filter gallery Nebula" src="../Photos/M45.png" alt="Custer" /></img></a>
+        <a target="_blank" href="../Photos/M42.png"><img class="filter gallery Nebula" src="../Photos/M42.png" alt="Nebula"></img></a>
+        <a target="_blank" href="../Photos/Ic5070___Ngc7000__nb_____________.png"><img class="filter gallery Nebula" src="../Photos/Ic5070___Ngc7000__nb_____________.png" alt="Nebula"></img></a>
+        <a target="_blank" href="../Photos/Ic_1396___The_Elephant_Trunk_Nebula____widefield_.png"><img class="filter gallery DarkNebula" src="../Photos/Ic_1396___The_Elephant_Trunk_Nebula____widefield_.png" alt="Nebula"></img></a>
 
 
 
+    </div>
 
-    </section>
 
 
     <footer>&copy; Stamatis Sarris
         <img src="../photos/insta logo.png" height=16px;>&nbsp;
         <img src="../photos/FACEBOOK LOGO.png" height=16px;>
     </footer>
+
+
+
 
 
 
